[package]
name = "mattermost-slash-meme"
version = "0.1.0"
authors = ["robo9k <robo9k@symlink.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.16", features = ["macros"] }
warp = "0.2.2"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.1.1", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.3"
bytes = "0.5"
imgflip = "0.1.0"
futures-util = "0.3.4"