[package]
name = "mattermost-slash-meme"
version = "0.1.0"
authors = ["robo9k <robo9k@symlink.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.16", features = ["macros", "rt-threaded"] }
warp = "0.2.2"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.1.1", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.3"
bytes = "0.5"
imgflip = "0.1.0"
futures-util = "0.3.4"
reqwest = { version = "0.10.4", features = ["json"] }
clap = { git = "https://github.com/clap-rs/clap/" }
clap-socketaddr = { git = "https://github.com/robo9k/clap-socketaddr" }
anyhow = "1.0.28"
http-api-problem = { version = "0.17.0", features = ["with-warp"] }
thiserror = "1.0.15"
